# sp1-reth

./: README.md
primitives/: Cargo.toml
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
script/: Cargo.toml
script/src/: main.rs
utils/: Cargo.toml
