[workspace]
[package]
version = "0.1.0"
name = "sp1-revm-program"
edition = "2021"

[dependencies]
alloy-rlp = { version = "0.3", default-features = false }
# sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", branch = "dev" }
sp1-zkvm = { path = "../../../infra/sp1/crates/zkvm/entrypoint" }
sp1-reth-primitives = { path = "../primitives" }

reth-primitives = { git = "https://github.com/sp1-patches/reth-new", branch = "john/update-for-v1", default-features = false}
revm = { git = "https://github.com/sp1-patches/revm-new", branch = "john/update-for-v1", features = [
    "serde",
], default-features = false }
revm-primitives = { git = "https://github.com/sp1-patches/revm-new", branch = "john/update-for-v1", default-features = false }
anyhow = "^1.0.81"
serde = "^1.0.204"

[patch.crates-io]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
revm = { git = "https://github.com/sp1-patches/revm-new", branch = "john/update-for-v1" }
revm-primitives = { git = "https://github.com/sp1-patches/revm-new", branch = "john/update-for-v1" }